# didwebvh-server-py

./: .dockerignore  .gitignore  ANONCREDS.md  README.md  index.yaml  pyproject.toml  zensical.toml
.github/workflows/: chart-release.yaml  pages.yml  pr-linting.yml  pr-tests.yaml  publish.yaml
charts/didwebvh-server/: Chart.yaml  values.yaml
charts/didwebvh-server/templates/server/: configmap.yaml  database-secret.yaml  deployment.yaml  secret.yaml
demo/: .env.demo  .env.example  Dockerfile.agent  Dockerfile.script  README.md  docker-compose.yml  load_test.py  load_test_agent.py  magic.sh  provision.py  pyproject.toml  register.sh  requirements.txt  witness-config.yml
docs/: .gitignore  README.md  about.md  admin-operations.md  anoncreds.md  api-endpoints.md  configuration.md  getting-started.md  index.md  roles.md  user-manual.md
docs/content/: admin-operations.md  anoncreds.md  api-endpoints.md  configuration.md  did-operations.md  examples.md  getting-started.md  introduction.md  protocols.md  roles.md  user-manual.md
docs/guides/: anoncreds.md  examples.md  protocols.md
docs/input/: admin-operations.md  api-endpoints.md  examples.md  getting-started.md  index.md
docs/javascripts/: top-nav.js
docs/stylesheets/: custom.css
frontend/: config.py  pyproject.toml
frontend/app/: __init__.py
frontend/app/plugins/: server.py
frontend/app/routes/main/: __init__.py
server/: .env.example  Dockerfile  README.md  config.py  main.py  pyproject.toml
server/app/: __init__.py  avatar_generator.py  dependencies.py  tasks.py  utilities.py
server/app/contexts/: __init__.py  attested_resource.py
server/app/db/: __init__.py  models.py
server/app/models/: anoncreds.py  base.py  di_proof.py  did_document.py  did_log.py  explorer.py  policy.py  presentation.py  resource.py  storage.py  task.py  web_schemas.py
server/app/plugins/: __init__.py  askar.py  didwebvh.py  invitations.py  policy.py  storage.py
server/app/routers/: admin.py  credentials.py  dependencies.py  explorer.py  identifiers.py  invitations.py  policies.py  resources.py  tails.py  webvh.py
server/app/services/: invitations.py
server/app/static/css/: branding.css
server/app/templates/components/: credential_list.jinja  credential_modal.jinja  did_list.jinja  did_modal.jinja  footer.jinja  head.jinja  header.jinja  resource_list.jinja  resource_modal.jinja  witness_list.jinja
server/app/templates/layouts/: base.jinja
server/app/templates/macros/: pagination.jinja
server/app/templates/pages/: credentials.jinja  did_list.jinja  dids.jinja  index.jinja  resource_list.jinja  resources.jinja  witnesses.jinja
server/tests/: conftest.py  fixtures.py  helpers.py  mock_agents.py  signer.py  test_00_core.py  test_01_did_operations.py  test_02_anoncreds.py  test_03_tails.py  test_04_tasks.py  test_05_explorer.py  test_anoncreds.py  test_core.py  test_database_operations.py  test_did_operations.py  test_policies.py  test_route_admin.py  test_route_credentials.py  test_route_explorer.py  test_route_identifiers.py  test_route_resources.py  test_route_tails.py  utils.py
