[project]
name = "didwebvh-server-py"
version = "0.1.0"
description = "DID WebVH Server"
readme = "README.md"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["C901"]  # Ignore mccabe complexity warnings
extend-ignore = ["C901"]  # Ignore complexity warnings

