[project]
name = "didwebvh-demo"
version = "0.4.0"
description = "DID WebVH Server - Demo and Load Testing Scripts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core dependencies
    "requests>=2.32.4",
    "httpx>=0.28.1",
    
    # DID WebVH
    "did-webvh>=1.0.0",
    
    # Cryptography
    "aries-askar>=0.3.2",
    "multiformats>=0.3.1.post4",
    "multiformats-config>=0.3.1",
    
    # AnonCreds
    "anoncreds>=0.2.0",
    
    # JSON and signing
    "canonicaljson>=2.0.0",
    "jcs>=0.2.1",
    
    # Logging and utilities
    "loguru>=0.7.3",
    "python-dotenv>=1.0.1",
    
    # Date/time handling
    "python-dateutil>=2.8.2",
]

[project.urls]
Repository = "https://github.com/decentralized-identity/didwebvh-server-py"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Demo contains scripts only, not a package
py-modules = []

